Fixed some problem with responsiveness on mobile device.

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-#header{
+#header {
     text-align: center;
     font-size: 48px;
     background-color: grey;
@@ -14,7 +14,7 @@
     z-index: 2;
 }
 
-#loader{
+#loader {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,49 +30,57 @@
     width: 84px;
     height: 84px;
     animation: spin 2s linear infinite;
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
+}
 
-#cards{
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+#cards {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding-top: 72px;
 }
 
-.card{
+.card {
     width: 240px;
     height: 360px;
     background: gold;
     margin: 4px;
 }
 
-.card img{
+.card img {
     width: 100%;
     height: 80%;
 }
 
-.card .title{
+.card .title {
     font-size: 20px;
     margin: 4px;
 }
 
-.loading { color: red; }
+.loading {
+    color: red;
+}
 
 /* Style the Image Used to Trigger the Modal */
-  .card .image {
+.card .image {
     cursor: pointer;
     transition: 0.3s;
-  }
-  
-  .card .image:hover {opacity: 0.7;}
-  
-  /* The Modal (background) */
-  .modal {
+}
+
+.card .image:hover {
+    opacity: 0.7;
+}
+
+/* The Modal (background) */
+.modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
@@ -82,20 +90,20 @@
     width: 100%; /* Full width */
     height: calc(100% - 72px); /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-  }
-  
-  /* Modal Content (Image) */
-  .modal-content {
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (Image) */
+.modal-content {
     margin: auto;
     display: block;
     width: 80%;
     max-width: 700px;
-  }
-  
-  /* Caption of Modal Image (Image Text) - Same Width as the Image */
-  #caption {
+}
+
+/* Caption of Modal Image (Image Text) - Same Width as the Image */
+#caption {
     margin: auto;
     display: block;
     width: 80%;
@@ -104,21 +112,25 @@
     color: #ccc;
     padding: 10px 0;
     height: 150px;
-  }
-  
-  /* Add Animation - Zoom in the Modal */
-  .modal-content, #caption { 
+}
+
+/* Add Animation - Zoom in the Modal */
+.modal-content, #caption {
     animation-name: zoom;
     animation-duration: 0.6s;
-  }
-  
-  @keyframes zoom {
-    from {transform:scale(0)} 
-    to {transform:scale(1)}
-  }
-  
-  /* The Close Button */
-  .close {
+}
+
+@keyframes zoom {
+    from {
+        transform: scale(0)
+    }
+    to {
+        transform: scale(1)
+    }
+}
+
+/* The Close Button */
+.close {
     position: absolute;
     top: 15px;
     right: 35px;
@@ -126,18 +138,42 @@
     font-size: 40px;
     font-weight: bold;
     transition: 0.3s;
-  }
-  
-  .close:hover,
-  .close:focus {
+}
+
+.close:hover,
+.close:focus {
     color: #bbb;
     text-decoration: none;
     cursor: pointer;
-  }
-  
-  /* 100% Image Width on Smaller Screens */
-  @media only screen and (max-width: 700px){
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px) {
     .modal-content {
-      width: 100%;
+        width: 100%;
     }
-  }
+}
+
+/* On screens that are 600px or less, set the background color to olive */
+@media screen and (max-width: 360px) {
+    #header {
+        text-align: center;
+        font-size: 24px;
+        background-color: grey;
+        padding: 8px 0;
+        color: antiquewhite;
+        position: fixed;
+        width: 100%;
+        z-index: 2;
+    }
+
+    #cards{
+        padding-top: 48px;
+    }
+
+    .modal{
+        top: 48px;
+    }
+}
+
+
